[gd_scene load_steps=7 format=3 uid="uid://cmmpnnvsrjrv8"]

[ext_resource type="Script" path="res://src/ui/win_screen_layer.gd" id="1_8wa6s"]
[ext_resource type="FontVariation" uid="uid://cy36dde3oif13" path="res://assets/fonts/PressStart2P_FontVar.res" id="1_y2jkg"]
[ext_resource type="Theme" uid="uid://c485aq3nvu4j0" path="res://assets/game_theme.theme" id="2_hcib5"]
[ext_resource type="Shader" path="res://assets/shaders/pause_blur.gdshader" id="5_4plsd"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1i1go"]
shader = ExtResource("5_4plsd")
shader_parameter/blur = 0.0
shader_parameter/brightness = 0.0

[sub_resource type="LabelSettings" id="LabelSettings_wbmiw"]
font = ExtResource("1_y2jkg")
font_size = 48
outline_size = 8
outline_color = Color(0, 0, 0, 1)
shadow_size = 4
shadow_color = Color(0, 0, 0, 0.435294)

[node name="WinScreenLayer" type="CanvasLayer"]
layer = 75
script = ExtResource("1_8wa6s")
main_menu_scene = "res://src/ui/main_menu.tscn"

[node name="ColorRect" type="ColorRect" parent="."]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_1i1go")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ContentLayer" type="CanvasLayer" parent="."]
unique_name_in_owner = true
layer = 80
offset = Vector2(0, -540)
transform = Transform2D(1, 0, 0, 1, 0, -540)

[node name="Control" type="Control" parent="ContentLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleContainer" type="CenterContainer" parent="ContentLayer/Control"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.25
grow_horizontal = 2

[node name="TitleLabel" type="Label" parent="ContentLayer/Control/TitleContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Player 1 wins!!"
label_settings = SubResource("LabelSettings_wbmiw")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonContainer" type="CenterContainer" parent="ContentLayer/Control"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.25
anchor_right = 1.0
anchor_bottom = 0.95
grow_horizontal = 2

[node name="PanelContainer" type="PanelContainer" parent="ContentLayer/Control/ButtonContainer"]
custom_minimum_size = Vector2(360, 280)
layout_mode = 2
theme = ExtResource("2_hcib5")

[node name="MarginContainer" type="MarginContainer" parent="ContentLayer/Control/ButtonContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="ContentLayer/Control/ButtonContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="RestartButton" type="Button" parent="ContentLayer/Control/ButtonContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_hcib5")
theme_override_font_sizes/font_size = 24
text = "Restart"

[node name="QuitButton" type="Button" parent="ContentLayer/Control/ButtonContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_hcib5")
theme_override_font_sizes/font_size = 24
text = "Quit"

[connection signal="pressed" from="ContentLayer/Control/ButtonContainer/PanelContainer/MarginContainer/VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="ContentLayer/Control/ButtonContainer/PanelContainer/MarginContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
